# stylegan2-torch

./: .devcontainer.json  .gitignore  404.html  Dockerfile  LICENSE  README.md  coverage.xml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  setup.py  sitemap.xml  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  docs.yaml  on_push.yaml  on_release.yaml  upload.yaml
all/: index.html
conda-recipe/: meta.yaml
discriminator/: index.html
docs/: all.md  discriminator.md  equalized_lr.md  faq.md  generator.md  index.md  setup.md  usage.md  utils.md
equalized_lr/: index.html
generator/: index.html
loss/: index.html  loss.md
search/: search_index.json
stylegan2_pytorch/: __init__.py
stylegan2_pytorch/discriminator/: __init__.pyi  blocks.py
stylegan2_pytorch/generator/: __init__.py  conv_block.py  mapping.py  rgb.py
stylegan2_pytorch/op/: upfirdn2d_kernel.cu
stylegan2_torch/: __init__.py  equalized_lr.py  loss.py  utils.py
stylegan2_torch/discriminator/: __init__.py  __init__.pyi  blocks.py
stylegan2_torch/generator/: __init__.py  __init__.pyi  conv_block.py  mapping.py  rgb.py
stylegan2_torch/op/: conv2d_gradfix.py  fused_act.py  fused_bias_act.cpp  upfirdn2d.cpp  upfirdn2d.py
tests/: test_version.py
utils/: index.html
